tests/machine/x/pascal/sort_stable.error
line: 73
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/sort_stable.pas
sort_stable.pas(70,14) Error: Incompatible types: got "TArray$1$crcE41905E8" expected "TArray$1$crc09D74DF2"
sort_stable.pas(17,19) Error: Can't read or write variables of this type
sort_stable.pas(73) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

